EXTRA_DIST = \
	bench.h \
	commands.h \
	error.h \
	message.h \
	misc.h \
	path.h \
	pkgdb.h \
	sigtrap.h \
	sys.h \
	taction.h \
	untgz.h

if !STATIC_SPKG_ONLY
libspkgincludedir = $(includedir)/libspkg
libspkginclude_HEADERS = \
	commands.h \
	error.h \
	message.h \
	misc.h \
	path.h \
	pkgdb.h \
	sigtrap.h \
	sys.h \
	taction.h \
	untgz.h
endif
